# ocelescope

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  example.ipynb  run.sh
src/backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Untitled.ipynb  dependency_graph.py  dev.Dockerfile  example.ipynb  index.py  main.py  ocean.code-profile  ocean_dependencies.gv  openapi.json  plugin_loader.py  pyproject.toml  registrar.py
src/backend/api/: config.py  dependencies.py  docs.py  exceptions.py  extensions.py  logger.py  middleware.py  serialize.py  session.py  task_api.py  task_base.py  tasks.py  utils.py
src/backend/api/model/: app_state.py  base.py  cache.py  climatiq.py  emissions.py  events.py  extension.py  (+8 more)
src/backend/emissions/: allocation.py  allocation_graph.py  allocation_rules.py  climatiq_api.py  emission_model.py  object_type_graphs.py  utils.py
src/backend/filters/: __init__.py  attributes.py  base.py  config_union.py  core.py  e2o_count.py  event_type.py  o2o_count.py  object_type.py  relation_count.py  time_range.py
src/backend/lib/: attributes.py  atttributes.py  filters.py  relations.py
src/backend/notebooks/: Untitled.ipynb  Untitled1.ipynb  filter.ipynb
src/backend/ocel/: attribute.py  default_ocel.py  ocel_wrapper.py  utils.py
src/backend/outputs/: __init__.py  base.py  registry.py
src/backend/plugin/: plugin_core.py  plugin_registry.py  schema.py
src/backend/plugins/: __init__.py  base.py  decorators.py  loader.py  registry.py  util.py
src/backend/resources/: __init__.py  base.py  ocdfg.py  ocpn.py  totem.py
src/backend/routes/: __init__.py  filter.py  info.py  ocels.py  outputs.py  plugin.py  plugins.py  resources.py  session.py  tasks.py
src/backend/scripts/: generateFilterUnion.py  generateResourceType.py  generateResourceUnion.py
src/backend/tasks/: ocel.py
src/backend/units/: climatiq.py  pint.py
src/backend/util/: cache.py  colors.py  constants.py  graph.py  hash.py  jupyter.py  latex.py  misc.py  pandas.py  tasks.py  types.py
src/backend/visualization/: boxplots.py  constants.py  ocpn.py  plots.py  rwth_colors.py
(+883 files in other folders)
