[project]
name = "ocean-backend"
version = "0.9.9"
description = ""
authors = [{ name = "Raimund Hensen", email = "raimund.hensen@rwth-aachen.de" }]
requires-python = "~=3.10"
dependencies = [
  "numpy~=1.26",
  "pm4py",
  "pandas~=2.1",
  "pint>=0.23,<0.24",
  "cachetools>=5.3.2,<6",
  "pydantic>=2.6.3,<3",
  "pydantic-settings>=2.2.1,<3",
  "fastapi[standard]>=0.112.2",
  "uvicorn>=0.28.0,<0.29",
  "python-multipart>=0.0.9,<0.0.10",
  "graphviz>=0.20.3",
]

[project.urls]
Repository = "https://github.com/rwth-pads/ocean"

[dependency-groups]
dev = [
  "jupyterlab>=4.0.7,<5",
  "dependentspy",
  "iso4>=0.0.2,<0.0.3",
  "seaborn>=0.13.0,<0.14",
  "matplotlib>=3.8.0,<4",
  "pre-commit>=4.2.0,<5",
]

[tool.uv]
package = false

[tool.uv.sources]
dependentspy = { git = "https://github.com/raihensen/dependentspy", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
exclude = ["drafts", "data"]

[tool.ruff]
fix = true
lint.ignore = ["E731"]
exclude = ["*filters/config_union.py", "*resources/__init__.py"]
